--- a/pom.xml
+++ b/pom.xml
@@ -10,14 +10,24 @@
 
     <dependencies>
         <dependency>
-            <groupId>rocks.xmpp</groupId>
-            <artifactId>xmpp-core-client</artifactId>
-            <version>0.6.2</version>
+            <groupId>org.igniterealtime.smack</groupId>
+            <artifactId>smack-java7</artifactId>
+            <version>4.2.0-alpha2</version>
         </dependency>
         <dependency>
-            <groupId>rocks.xmpp</groupId>
-            <artifactId>xmpp-extensions-client</artifactId>
-            <version>0.6.2</version>
+            <groupId>org.igniterealtime.smack</groupId>
+            <artifactId>smack-tcp</artifactId>
+            <version>4.2.0-alpha2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.igniterealtime.smack</groupId>
+            <artifactId>smack-extensions</artifactId>
+            <version>4.2.0-alpha2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.igniterealtime.smack</groupId>
+            <artifactId>smack-experimental</artifactId>
+            <version>4.2.0-alpha2</version>
         </dependency>
         <dependency>
             <groupId>com.squareup.retrofit</groupId>
