--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
         <dependency>
             <groupId>com.github.DrawersApp</groupId>
             <artifactId>drawers-java-sdk</artifactId>
-            <version>v1.3</version>
+            <version>v1.9.9</version>
         </dependency>
         <dependency>
             <groupId>com.squareup.retrofit</groupId>
@@ -68,7 +68,7 @@
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
-                                        <Main-Class>dictionary.bot.impl.BotsCaller</Main-Class>
+                                        <Main-Class>dictionary.bot.impl.DictionaryBotCaller</Main-Class>
                                     </manifestEntries>
                                 </transformer>
                             </transformers>
